# google-lightspeed-agent

./: .env.example  Containerfile  Containerfile.marketplace-handler  EXTERNAL_SERVICES.md  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements-agent.txt  requirements-handler.txt
.tekton/: google-lightspeed-agent-pull-request.yaml  google-lightspeed-agent-push.yaml  google-marketplace-handler-pull-request.yaml  google-marketplace-handler-push.yaml
deploy/cloudrun/: README.md  cleanup.sh  deploy.sh  service.yaml  setup.sh
deploy/openshift/: Chart.yaml  README.md  values.yaml
deploy/openshift/templates/: _helpers.tpl  agent-deployment.yaml  agent-route.yaml  agent-service.yaml  configmap.yaml  gcp-sa-secret.yaml  handler-deployment.yaml  handler-route.yaml  handler-service.yaml  networkpolicy-handler.yaml  networkpolicy-postgresql.yaml  networkpolicy-redis.yaml  postgresql-deployment.yaml  postgresql-pvc.yaml  redis-deployment.yaml  redis-pvc.yaml  secret.yaml
deploy/podman/: lightspeed-agent-pod.yaml  lightspeed-agent-secret.yaml  redis-pod.yaml
docs/: api.md  architecture.md  authentication-flow.md  authentication.md  configuration.md  marketplace.md  mcp-integration.md  metering.md  rate-limiting.md  troubleshooting.md
src/lightspeed_agent/api/: app.py
src/lightspeed_agent/api/a2a/: agent_card.py  usage_plugin.py
src/lightspeed_agent/auth/: middleware.py
src/lightspeed_agent/config/: settings.py
src/lightspeed_agent/core/: agent.py
src/lightspeed_agent/db/: __init__.py  models.py
src/lightspeed_agent/dcr/: keycloak_client.py  repository.py
src/lightspeed_agent/marketplace/: app.py  models.py  router.py  service.py
src/lightspeed_agent/metering/: __init__.py  repository.py
src/lightspeed_agent/service_control/: reporter.py  scheduler.py
src/lightspeed_agent/tools/: __init__.py  insights_tools.py  mcp_config.py  mcp_headers.py
tests/: README.md  conftest.py  test_a2a.py  test_auth_middleware.py  test_dcr.py  test_marketplace.py  test_metering_repository.py  test_service_control.py  test_settings.py  test_tools.py  test_usage_plugin.py
